# SE_Calculator_NDK

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/se_calculator/: ExampleInstrumentedTest.java  GtestRunner.java  TargetLibrary.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  calculatorUtils.cpp  calculatorUtils.h  calculatorUtilsTest.cpp  gtest_wrapper.cpp  native-lib.cpp
app/src/main/java/com/example/se_calculator/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/se_calculator/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
